layout.css: Solve CSS box overflow problem in backend

--- a/src/main/webapp/layout/layout.css
+++ b/src/main/webapp/layout/layout.css
@@ -81,6 +81,7 @@ body.popup {
   padding-top:		1em;
   padding-bottom:	1em;
   width:		100%;
+  min-width:		min-content;
  }
 
 #header {
